<resources>
    <string name="app_name">Smart Sonia Dashboard</string>
    <string name="hint_username">User name</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Log in</string>
    <string name="message_network">There seems to be no internet connection. Log in and try again.</string>
    <string name="empty_field_username">Username cannot be empty.</string>
    <string name="empty_field_password">Password cannot be empty.</string>
    <string name="password_not_match_error">The passwords do not match.</string>
    <string name="empty_field_email">Email cannot be empty.</string>
    <string name="username_space_error">Username cannot contain spaces.</string>
    <string name="empty_field_majorId">Major ID cannot be empty.</string>
    <string name="empty_field_location">Location info cannot be empty.</string>
    <string name="empty_field_title">Message\'s title cannot be empty.</string>
    <string name="error_notes">Text is to large.</string>
    <string name="space_on_field_username">Username cannot contain spaces.</string>
    <string name="error">Something went wrong. Try again.</string>
    <string name="invalid_user">Invalid user credentials.</string>
    <string name="message_wait">Please wait…</string>
    <string name="worker_board_page_title">Check worker\'s equipment</string>
    <string name="beacons_page_title">Annotate Beacons</string>
    <string name="worker_data_alerts_page_title">Monitor Real-time Exploratory Dashboards</string>
    <string name="message_page_title">Personalised Messages</string>
    <string name="alerts_page_title">Automated Alerts</string>
    <string name="recommendations_page_title">Automated Recommendations</string>
    <string name="accident_page_title">Accidents</string>
    <string name="sos_page_title">SOS Notifications</string>
    <string name="history_page_title">Historical Analytics</string>
    <string name="logout_confirm_title_a">Are you sure you want</string>
    <string name="logout_confirm_title_b">to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="beacon_major_id">Major Beacon ID</string>
    <string name="beacon_notes">Notes:</string>
    <string name="beacon_add">Add Beacon</string>
    <string name="beacon_edit_title">Edit Beacon with Major ID:</string>
    <string name="beacon_edit_btn">Edit Beacon</string>
    <string name="delete_beacon">Delete Beacon with Major ID:</string>
    <string name="delete_sos_alert">Delete SOS notification?</string>
    <string name="delete_alert">Delete alert?</string>
    <string name="hint_location">Add location info</string>
    <string name="hint_note">Add notes</string>
    <string name="hint_beacon">Add beacon\'s major ID</string>
    <string name="cancel">Cancel</string>
    <string name="error_data">Something went wrong. Please try again.</string>
    <string name="wait">Please wait…</string>
    <string name="check_in">Check in</string>
    <string name="match_smartwatch">Match Smartwatch</string>
    <string name="select_smartwatch">Select Smartwatch:</string>
    <string name="match_smartwatch_none">NONE</string>
    <string name="switch_active">Active</string>
    <string name="switch_check_in_confirmed">Check in Confirmed</string>
    <string name="check_in_confirmed">CONFIRMED</string>
    <string name="check_in_not_confirmed">NOT CONFIRMED</string>
    <string name="worker_add">Add Worker</string>
    <string name="worker_edit_title">Edit Worker:</string>
    <string name="worker_edit_btn">Edit Worker</string>
    <string name="delete_worker">Delete worker:</string>
    <string name="hint_worker">Worker\'s username</string>
    <string name="hint_email">Worker\'s email</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="worker_name">Worker Name</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="no_sos_alerts">No SOS notifications found</string>
    <string name="no_alerts">No automated alerts found</string>
    <string name="no_messages">No personalized messages found</string>
    <string name="no_recommendations">No automated recommendations found</string>
    <string name="no_accidents">No accidents found</string>
    <string name="no_data">No data found</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="bpm">BPM</string>
    <string name="environmental_data">Environmental Data:</string>
    <string name="barometer">barometer</string>
    <string name="et_day">et_day</string>
    <string name="temp_in">temp_in</string>
    <string name="temp_out">temp_out</string>
    <string name="hum_in">hum_in</string>
    <string name="hum_out">hum_out</string>
    <string name="wind_speed">wind_speed</string>
    <string name="wind_speed_10_min_avg">wind speed 10 min avg</string>
    <string name="rain_rate">rain_rate</string>
    <string name="uv">uv</string>
    <string name="solar_radiation">solar_radiation</string>
    <string name="rain_day">rain_day</string>
    <string name="last_updated">Last updated:</string>
    <string name="received_on">Received on:</string>
    <string name="area_risk_level">Area risk level</string>
    <string name="risk_level">Risk Level:</string>
    <string name="risk_grading">Risk Grading:</string>
    <string name="created_on">Created on:</string>
    <string name="all_alerts">All Alerts</string>
    <string name="very_low_risk_level">Very Low Risk Level</string>
    <string name="low_risk_level">Low Risk Level</string>
    <string name="medium_risk_level">Medium Risk Level</string>
    <string name="high_risk_level">High Risk Level</string>
    <string name="very_high_risk_level">Very High Risk Level</string>
    <string name="send_alert">Send personalized message</string>
    <string name="send_alert_to">Send personalized message to: </string>
    <string name="alert_title_hint">Message title</string>
    <string name="alert_t">Alert title</string>
    <string name="alert_message_hint">Message</string>
    <string name="send">Send</string>
    <string name="send_successful">The message has been successfully created.</string>
    <string name="report_successful">The accident\'s report has been successfully created.</string>
    <string name="recommendation_t">Recommendation Title</string>
    <string name="can_not_edit">You cannot edit, delete or create historical data.</string>
    <string name="today">Today</string>
    <string name="calendar">Calendar</string>
    <string name="historical_environmental_data_are_not_available">Historical environmental data are not available.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="alerts_calendar">Alerts</string>
    <string name="accidents_calendar">Accidents</string>
    <string name="accident_calendar">Accident</string>
    <string name="alert_calendar">Alert</string>
    <string name="sos_notifications_calendar">SOS Notifications</string>
    <string name="sos_notification_calendar">SOS Notification</string>
    <string name="select_worker">Select a worker to send a message</string>
    <string name="select_worker_accidents">Select a worker to report an accident</string>
    <string name="all_accidents_title">Accidents</string>
    <string name="all_message_title">Messages</string>
    <string name="read_state">Message\'s status:</string>
    <string name="zone_state">Dangerous zone:</string>
    <string name="report_accident_to">Report an accident for: </string>
    <string name="report_action">Report</string>
    <string name="report_title_hint">Accident title</string>
    <string name="report_info_hint">Information</string>
    <string name="report_time">Accident time</string>
    <string name="report_field_title">Accident\'s title cannot be empty.</string>
    <string name="channel_name">SOS notifications</string>
    <string name="channel_description">There are new SOS notifications</string>
    <string name="message_title_only">Messages</string>
    <string name="alerts_title_only">Alerts</string>
    <string name="recommendations_title_only">Recommendations</string>
    <string name="accidents_insights">Accident\'s insights</string>
    <string name="accidents_worker_name">Worker\'s username:</string>
    <string name="accidents_time">Accident\'s time:</string>
    <string name="accidents_zone">Accident\'s zone</string>
    <string name="relevant_worker_data">Relevant worker data</string>
    <string name="navigation_app_error">Navigation app not found</string>
</resources>