<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="220dp"
    android:padding="8dp"
    android:background="@drawable/calendar_grey_outline_section">
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/sos_section"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/calendar_green_outline_button">
        <TextView
            android:id="@+id/sos_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/sos_notifications_calendar"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/alerts_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/sos_section"
        android:background="@drawable/calendar_yellow_outline_button"
        android:padding="8dp">

        <TextView
            android:id="@+id/alert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/alerts_calendar"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/accident_section"
        android:padding="8dp"
        android:layout_below="@id/alerts_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/calendar_red_outline_button">

        <TextView
            android:id="@+id/accident_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/accidents_calendar"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/day_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alerts_section"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="bottom"
        android:maxLines="1"
        android:textColor="@color/grey_calendar"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>

